--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,8 +1,8 @@
 <nav class="grey darken-3">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="/articles" class="brand-logo center"></i> ArticleBase</a>
-            <a href="#" data-target="main-menu" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
+            <a href="/" class="brand-logo center">ArticleBase</a>
+            <a href="#" data-target="main-menu" class="sidenav-trigger show-on-large"><i class="fas fa-bars fa-2x"></i></a>
             {{!-- right nav --}}
             <ul class="right hide-on-med-and-down">
                 {{#if user}}
