--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,19 @@ body {
 main {
     flex: 1 0 auto;
 }
+
+.story-text {
+    height: 120px;
+}
+
+.dash-status {
+    text-transform: capitalize;
+}
+
+#delete-form {
+    display: inline;
+}
+
+input {
+    color: rgba(0, 0, 0, .87) !important;
+}
