--- a/views/articles/add.handlebars
+++ b/views/articles/add.handlebars
@@ -31,6 +31,6 @@
                 <textarea name="body" cols="30" rows="10" class="materialize-textarea"></textarea>
             </div>
         </div>
-        <input type="submit" value="Submit" class="btn">
+        <input type="submit" value="Submit" class="btn white-text">
     </form>
 </div>
