--- a/views/articles/show.handlebars
+++ b/views/articles/show.handlebars
@@ -1,1 +1,22 @@
-<h1>Show article</h1>
+<div class="row">
+    <div class="col s12 m8">
+        <h3>{{article.title}}</h3>
+        <div class="card story">
+            <div class="card-content">
+                <span class="card-title">{{formateDate article.date 'MMMM Do YYYY'}}</span>
+                {{{article.body}}}
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m4">
+        <div class="card center-align">
+            <div class="card-content">
+                <span class="card-title">{{article.user.firstName}} {{article.user.lastName}}</span>
+                <img src="{{article.user.image}}" class="circle responsive-img">
+            </div>
+            <div class="card-action">
+                <a href="/stories/user/{{article.user.id}}">More from {{article.user.firstName}}</a>
+            </div>
+        </div>
+    </div>
+</div>
