--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -23,7 +23,7 @@
                 <li class="divider"></li>
                 {{#if user}}
                 <li><a href="/dashboard"><i class="fas fa-cog"></i> Dashboard</a></li>
-                <li><a href="/stories/my"><i class="fas fa-user"></i> My Stories</a></li>
+                <li><a href="/articles/my"><i class="fas fa-user"></i> My Stories</a></li>
                 <li><a href="/auth/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                 {{/if}}
             </ul>
