--- a/views/articles/index.handlebars
+++ b/views/articles/index.handlebars
@@ -4,9 +4,9 @@
     <div class="col s12 m4">
         <div class="card">
             <div class="card-image">
-                <a href="/articles/edit/{{id}}" class="btn-floating halfway-fab red">
-                    <i class="fas fa-pencil-alt"></i>
-                </a>
+                {{#if user}}
+                {{{editIcon user.id ../user.id id}}}
+                {{/if}}
             </div>
             <div class="card-content center-align">
                 <h5>{{title}}</h5>
@@ -14,7 +14,9 @@
                 <br>
                 <div class="chip">
                     <img src="{{user.image}}">
-                    {{user.firstName}} {{user.lastName}}
+                    <a href="/articles/user/{{user.id}}">
+                        {{user.firstName}} {{user.lastName}}
+                    </a>
                 </div>
             </div>
             <div class="card-action center-align">
