--- a/views/articles/show.handlebars
+++ b/views/articles/show.handlebars
@@ -1,12 +1,48 @@
 <div class="row">
     <div class="col s12 m8">
-        <h3>{{article.title}}</h3>
+        <h3>{{article.title}}
+            <small>{{{editIcon article.user.id user.id article.id false}}}</small>
+        </h3>
         <div class="card story">
             <div class="card-content">
                 <span class="card-title">{{formateDate article.date 'MMMM Do YYYY'}}</span>
                 {{{article.body}}}
             </div>
         </div>
+
+        {{#if article.allowComment}}
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">Comments</span>
+                {{#if user}}
+                <form action="/articles/comment/{{article.id}}" method="POST">
+                    <div class="input-field">
+                        <textarea name="commentBody" class="materialize-textarea"></textarea>
+                        <label for="commentBody">Add Comment</label>
+                        <input type="submit" value="Submit" class="btn white-text">
+                    </div>
+                </form>
+                {{else}}
+                <p>Please <a href="/auth/google"> log in </a> to leave a comment</p>
+                {{/if}}
+            </div>
+        </div>
+        {{#each article.comments}}
+        <div class="card">
+            <div class="card-content">
+                <h5>{{commentBody}}</h5>
+                <div class="chip">
+                    <img src="{{commentUser.image}}">
+                    <a href="/articles/user/{{commentUser.id}}">
+                    {{commentUser.firstName}} {{commentUser.lastName}}
+                    </a>
+                </div>
+                <br>
+                <small>Posted: {{formateDate commentDate 'MMMM Do YYYY'}}</small>
+            </div>
+        </div>
+        {{/each}}
+        {{/if}}
     </div>
     <div class="col s12 m4">
         <div class="card center-align">
@@ -15,7 +51,7 @@
                 <img src="{{article.user.image}}" class="circle responsive-img">
             </div>
             <div class="card-action">
-                <a href="/stories/user/{{article.user.id}}">More from {{article.user.firstName}}</a>
+                <a href="/articles/user/{{article.user.id}}">More from {{article.user.firstName}}</a>
             </div>
         </div>
     </div>
